# qds-tools

./: .gitignore  README.md  nds-tools.sln
csv2nds/: .gitattributes  .gitignore  CMakeLists.txt  example.csv  example.xml  main.cpp  run_green_tripdata.sh  run_yellow_tripdata.sh  stdafx.cpp  stdafx.h  string_util.h  tripdata.sh  types.h
csv2nds/data/: get_list_ts.sh  get_list_xml.sh  green_tripdata_2013-08.csv
csv2nds/data/covid/: .gitignore  download-dados.sh  get_complete_list.sh  get_list_of_field.sh  treatment.sh
csv2nds/schema/: example.xml  gaussian.xml  gaussian_100M.xml  gaussian_10M.xml  gaussian_1M.xml  gaussian_500M.xml  gaussian_50M.xml  gaussian_5M.xml  green_tripdata_2013-2016.xml  green_tripdata_2013.xml  green_tripdata_2014.xml  green_tripdata_2015.xml  green_tripdata_2016.xml  green_tripdata_2017.xml  qdscovid.xml  qdscovid_conditions.xml  qdscovid_registers.xml  qdscovid_symptoms.xml  yellow_tripdata_2009.xml  yellow_tripdata_2010.xml  yellow_tripdata_2011.xml  yellow_tripdata_2012.xml  yellow_tripdata_2013.xml  yellow_tripdata_2014.xml  yellow_tripdata_2015.xml  yellow_tripdata_2016.xml  yellow_tripdata_2017.xml
csv2nds/test/: sus_cont_ciap_mini_test.sh  sus_cont_ciap_test.sh  test_cube.sh  test_cube.txt
dmp2nds/: CMakeLists.txt  date_util.h  main.cpp  types.h
dmp2nds/schema/: example.xml  twitter_dmp.xml
geojson/: .gitignore  Nome.java  Population.java  nomes.csv  population_2017.csv
geojson/files/: cod_macro.geojson
hcf2nds/: CMakeLists.txt  DataDescriptor.h  hcf2nds  hcf2nds.vcxproj  hcf2nds.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
ipch/HCF2NDS-cdfad39b/: HCF2NDS-545123f4.ipch
nc2nds/: CMakeLists.txt  date_util.h  main.cpp  nc2nds.vcxproj  nc2nds.vcxproj.filters  stdafx.h  string_util.cpp
nc2nds/data/: nc2nds  script.sh
synthetic/: CMakeLists.txt  main.cpp  stdafx.h  types.h
